feat: undo checkin and checkout, todays income, guest phone

--- a/views/check-in-detail.ejs
+++ b/views/check-in-detail.ejs
@@ -525,7 +525,7 @@
 
   const deleteBooking = async () => {
     const { isConfirmed } = await Swal.fire({
-      title: 'Yakin membatalkan booking?',
+      title: 'Batalkan Pesanan',
       text: 'Berhati-hati dalam pembatalan booking, karena tindakan ini tidak dapat dikembalikan, pastikan pembatalan dilakukan dengan tujuan yang tepat.',
       icon: 'question',
       showCancelButton: true,
