--- a/views/account-detail.ejs
+++ b/views/account-detail.ejs
@@ -38,7 +38,7 @@
 
   const deleteAccount = async () => {
     const { isConfirmed } = await Swal.fire({
-      title: 'Yakin menghapus akun ini?',
+      title: 'Hapus Akun',
       text: 'Tindakan penghapusan ini tidak dapat dikembalikan',
       icon: 'question',
       showCancelButton: true,
@@ -84,12 +84,14 @@
       const role = formAccount.querySelector('#role').value
 
       const { isConfirmed } = await Swal.fire({
-        title: 'Yakin mengubah akun?',
+        title: 'Perbaharui Akun',
+        text: 'Yakin mengubah akun?',
         icon: 'question',
         showCancelButton: true,
         confirmButtonColor: '#3085d6',
         cancelButtonColor: '#d33',
-        confirmButtonText: 'Tambahkan'
+        confirmButtonText: 'Ubah',
+        cancelButtonText: 'Batal'
       })
 
       if (isConfirmed) {
