--- a/views/account.ejs
+++ b/views/account.ejs
@@ -77,12 +77,14 @@
       }
 
       const { isConfirmed } = await Swal.fire({
-        title: 'Yakin menambahkan akun baru?',
+        title: 'Tambah Akun',
+        text: 'Yakin menambahkan akun baru?',
         icon: 'question',
         showCancelButton: true,
         confirmButtonColor: '#3085d6',
         cancelButtonColor: '#d33',
-        confirmButtonText: 'Tambahkan'
+        confirmButtonText: 'Tambahkan',
+        cancelButtonText: 'Batal'
       })
 
       if (isConfirmed) {
