--- a/views/check-out-detail.ejs
+++ b/views/check-out-detail.ejs
@@ -48,7 +48,7 @@
             required
             class="input-disable"
             disabled
-            value="<%= detail.guestName %>" />
+            value="<%= detail.guestName %> - <%= detail.phone %>" />
         </div>
         <div class="lg:col-span-2">
           <label for="room-deposit">Deposit</label>
@@ -251,6 +251,7 @@
           <button type="button" class="cyan" onClick="updateRoom()">Simpan Perubahan</button>
         </div>
         <button type="button" class="emerald" onclick="payOffBook()">Lunasi Booking</button>
+        <button type="button" class="red" onclick="undoCheckIn()">Batalkan Check In</button>
       </div>
     </form>
     <div class="flex-1 flex flex-col gap-4">
@@ -380,6 +381,7 @@
   // CONSTANT VALUE
   const bookingId = '<%= params %>'
   const nightCount = calculateNights()
+  const guestId = '<%= detail.guest %>'
 
   // INIT VALUE WHEN INC/DEC EXTRA
 
@@ -860,6 +862,43 @@
     }
   }
 
+  // UNDO CHECK IN
+  const undoCheckIn = async () => {
+    const { isConfirmed } = await Swal.fire({
+      title: 'Pembatalan Check In',
+      text: 'Yakin membatalkan check in?',
+      icon: 'question',
+      showCancelButton: true,
+      confirmButtonColor: '#3085d6',
+      cancelButtonColor: '#d33',
+      confirmButtonText: 'Batalkan',
+      cancelButtonText: 'Tutup'
+    })
+
+    if (isConfirmed) {
+      try {
+        await axios.patch(`/api/bookings/checkin/undo/${bookingId}`)
+
+        await Swal.fire({
+          title: 'Berhasil!',
+          text: 'Check In dibatalkan',
+          icon: 'success',
+          confirmButtonText: 'Oke!'
+        })
+        location.replace(`/checkin/${bookingId}`)
+      } catch (error) {
+        const errMessage = error?.response?.data?.message || error.message
+
+        await Swal.fire({
+          title: 'Error!',
+          text: errMessage,
+          icon: 'error',
+          confirmButtonText: 'Tutup'
+        })
+      }
+    }
+  }
+
   // SUBMIT STUFF
   const formSubmit = document.querySelector('#form-checkin')
 
@@ -893,7 +932,8 @@
           paid: totalPrice + finesTotal - totalDiscount,
           discount: totalDiscount,
           roomNumber,
-          pay: getTotalComplete()
+          pay: getTotalComplete(),
+          guest: guestId
         }
         if (isRoomChanged) {
           throw new Error('Perubahan belum disimpan')
