--- a/views/credits-list.ejs
+++ b/views/credits-list.ejs
@@ -82,7 +82,8 @@
       showCancelButton: true,
       confirmButtonColor: '#3085d6',
       cancelButtonColor: '#d33',
-      confirmButtonText: 'Tambahkan'
+      confirmButtonText: 'Tambahkan',
+      cancelButtonText: 'Batal'
     })
 
     if (isConfirmed) {
