--- a/views/fines.ejs
+++ b/views/fines.ejs
@@ -105,12 +105,14 @@
       }
 
       const { isConfirmed } = await Swal.fire({
-        title: 'Yakin menambahkan denda baru?',
+        title: 'Tambah Denda',
+        text: 'Yakin menambahkan denda baru?',
         icon: 'question',
         showCancelButton: true,
         confirmButtonColor: '#3085d6',
         cancelButtonColor: '#d33',
-        confirmButtonText: 'Tambahkan'
+        confirmButtonText: 'Tambahkan',
+        cancelButtonText: 'Batal'
       })
 
       if (isConfirmed) {
