--- a/views/goods-detail.ejs
+++ b/views/goods-detail.ejs
@@ -49,13 +49,14 @@
 
   const deleteGood = async () => {
     const { isConfirmed } = await Swal.fire({
-      title: 'Yakin menghapus barang ini?',
-      text: 'Tindakan penghapusan ini tidak dapat dikembalikan',
+      title: 'Hapus Barang',
+      text: 'Yakin menghapus barang ini? Tindakan penghapusan ini tidak dapat dikembalikan',
       icon: 'question',
       showCancelButton: true,
       confirmButtonColor: '#3085d6',
       cancelButtonColor: '#d33',
-      confirmButtonText: 'Hapus'
+      confirmButtonText: 'Hapus',
+      cancelButtonText: 'Batal'
     })
 
     if (isConfirmed) {
@@ -139,12 +140,14 @@
       }
 
       const { isConfirmed } = await Swal.fire({
-        title: 'Yakin mengubah detail barang?',
+        title: 'Perbaharui Barang',
+        text: 'Yakin mengubah detail barang?',
         icon: 'question',
         showCancelButton: true,
         confirmButtonColor: '#3085d6',
         cancelButtonColor: '#d33',
-        confirmButtonText: 'Ubah'
+        confirmButtonText: 'Ubah',
+        cancelButtonText: 'Batal'
       })
 
       if (isConfirmed) {
