--- a/views/goods.ejs
+++ b/views/goods.ejs
@@ -144,12 +144,14 @@
       }
 
       const { isConfirmed } = await Swal.fire({
-        title: 'Yakin menambahkan barang baru?',
+        title: 'Tambahkan Barang',
+        text: 'Yakin menambahkan barang baru?',
         icon: 'question',
         showCancelButton: true,
         confirmButtonColor: '#3085d6',
         cancelButtonColor: '#d33',
-        confirmButtonText: 'Tambahkan'
+        confirmButtonText: 'Tambahkan',
+        cancelButtonText: 'Batal'
       })
 
       if (isConfirmed) {
