--- a/views/guest-detail.ejs
+++ b/views/guest-detail.ejs
@@ -44,6 +44,10 @@
             <% }%> <% }) %>
           </select>
         </div>
+        <div class="sm:col-span-1">
+          <label for="guest-phone">No. Telepon</label>
+          <input type="text" id="guest-phone" placeholder="Masukan no telepon tamu" required="" value="<%= guestDetail.phone %>" />
+        </div>
       </div>
       <button type="submit">Ubah</button>
       <button type="button" class="red" onClick="deleteGuest()">Hapus</button>
@@ -98,16 +102,19 @@
       const address = document.querySelector('#guest-address').value
       const city = document.querySelector('#guest-city').value
       const nationality = document.querySelector('#guest-nationality').value
+      const phone = document.querySelector('#guest-phone').value
 
-      const payload = { idType, idNumber, name, gender, address, city, nationality }
+      const payload = { idType, idNumber, name, gender, address, city, nationality,phone }
 
       const { isConfirmed } = await Swal.fire({
-        title: 'Yakin memperbaharui data tamu?',
+        title: 'Perbaharui Tamu',
+        text: 'Yakin memperbaharui data tamu?',
         icon: 'question',
         showCancelButton: true,
         confirmButtonColor: '#3085d6',
         cancelButtonColor: '#d33',
-        confirmButtonText: 'Tambahkan'
+        confirmButtonText: 'Perbaharui',
+        cancelButtonText:'Batal'
       })
 
       if (isConfirmed) {
