--- a/views/partials/checkout-table-header.ejs
+++ b/views/partials/checkout-table-header.ejs
@@ -26,7 +26,17 @@
               value="<%= query.search %>" />
           </div>
           <div class="relative flex items-center flex-[1] gap-2">
-            <label for="start-date" class="custom_label">Check-In</label>
+            <label for="limit" class="custom_label">Limit</label>
+            <input
+              type="number"
+              id="limit"
+              name="limit"
+              class="p-2 text-sm text-gray-900 border border-gray-300 rounded-lg bg-gray-50 focus:ring-primary-500 focus:border-primary-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
+              placeholder="Limit"
+              value="<%= query.limit %>" />
+          </div>
+          <div class="relative flex items-center flex-[1] gap-2">
+            <label for="start-date" class="custom_label">In</label>
             <input
               type="date"
               id="start-date"
@@ -36,7 +46,7 @@
               value="<%= query.start %>" />
           </div>
           <div class="relative flex items-center flex-[1] gap-2">
-            <label for="end-date" class="custom_label">Check-Out</label>
+            <label for="end-date" class="custom_label">Out</label>
             <input
               type="date"
               id="end-date"
@@ -68,6 +78,26 @@
                   <path
                     d="M214.67 72H200V40a8 8 0 0 0-8-8H64a8 8 0 0 0-8 8v32H41.33C27.36 72 16 82.77 16 96v80a8 8 0 0 0 8 8h32v32a8 8 0 0 0 8 8h128a8 8 0 0 0 8-8v-32h32a8 8 0 0 0 8-8V96c0-13.23-11.36-24-25.33-24M72 48h112v24H72Zm112 160H72v-48h112Zm40-40h-24v-16a8 8 0 0 0-8-8H64a8 8 0 0 0-8 8v16H32V96c0-4.41 4.19-8 9.33-8h173.34c5.14 0 9.33 3.59 9.33 8Zm-24-52a12 12 0 1 1-12-12a12 12 0 0 1 12 12" />
                 </g>
+              </svg>
+            </a>
+            <a
+              href="/total/checkout"
+              title="Cetak total pendapatan kamar aktif"
+              class="flex items-center justify-center w-full px-4 py-2 text-sm font-medium text-white bg-lime-700 border border-gray-200 rounded-lg md:w-auto focus:outline-none hover:bg-lime-800 hover:text-white focus:ring-4 focus:ring-lime-200 dark:focus:ring-lime-900 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700">
+              <svg
+                class="w-5 h-5 text-white"
+                aria-hidden="true"
+                xmlns="http://www.w3.org/2000/svg"
+                width="24"
+                height="24"
+                fill="none"
+                viewBox="0 0 24 24">
+                <path
+                  stroke="currentColor"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M8 17.345a4.76 4.76 0 0 0 2.558 1.618c2.274.589 4.512-.446 4.999-2.31.487-1.866-1.273-3.9-3.546-4.49-2.273-.59-4.034-2.623-3.547-4.488.486-1.865 2.724-2.899 4.998-2.31.982.236 1.87.793 2.538 1.592m-3.879 12.171V21m0-18v2.2" />
               </svg>
             </a>
           </div>
