--- a/views/room-cat-detail.ejs
+++ b/views/room-cat-detail.ejs
@@ -81,12 +81,14 @@
       }
 
       const { isConfirmed } = await Swal.fire({
-        title: 'Yakin mengubah kategori?',
+        title: 'Perbaharui Kategori',
+        text: 'Yakin mengubah kategori?',
         icon: 'question',
         showCancelButton: true,
         confirmButtonColor: '#3085d6',
         cancelButtonColor: '#d33',
-        confirmButtonText: 'Ubah'
+        confirmButtonText: 'Ubah',
+        cancelButtonText: 'Batal'
       })
 
       if (isConfirmed) {
@@ -115,12 +117,14 @@
   // DELETE STUFF
   const deleteRoomCat = async () => {
     const { isConfirmed } = await Swal.fire({
-      title: 'Yakin menghapus kategori?',
+      title: 'Hapus Kategori',
+      text: 'Yakin menghapus kategori?',
       icon: 'question',
       showCancelButton: true,
       confirmButtonColor: '#3085d6',
       cancelButtonColor: '#d33',
-      confirmButtonText: 'Hapus'
+      confirmButtonText: 'Hapus',
+      cancelButtonText: 'Batal'
     })
 
     if (isConfirmed) {
