--- a/views/room-cat.ejs
+++ b/views/room-cat.ejs
@@ -130,12 +130,14 @@
       }
 
       const { isConfirmed } = await Swal.fire({
-        title: 'Yakin menambahkan kategori baru?',
+        title: 'Tambah Kategori',
+        text: 'Yakin menambahkan kategori baru?',
         icon: 'question',
         showCancelButton: true,
         confirmButtonColor: '#3085d6',
         cancelButtonColor: '#d33',
-        confirmButtonText: 'Tambahkan'
+        confirmButtonText: 'Tambahkan',
+        cancelButtonText: 'Batal'
       })
 
       if (isConfirmed) {
