--- a/views/room.ejs
+++ b/views/room.ejs
@@ -125,12 +125,14 @@
       }
 
       const { isConfirmed } = await Swal.fire({
-        title: 'Yakin menambahkan kamar baru?',
+        title: 'Tambah Kamar',
+        text: 'Yakin menambahkan kamar baru?',
         icon: 'question',
         showCancelButton: true,
         confirmButtonColor: '#3085d6',
         cancelButtonColor: '#d33',
-        confirmButtonText: 'Tambahkan'
+        confirmButtonText: 'Tambahkan',
+        cancelButtonText: 'Batal'
       })
 
       if (isConfirmed) {
