--- a/views/active-room-total.ejs
+++ b/views/active-room-total.ejs
@@ -114,8 +114,8 @@
       </div>
     </form>
   </div>
-  <h2 class="subhead text-center">Daftar Total Kamar Aktif</h2>
-  <p class="text-center text-xs">Total pendapatan kamar yang sedang digunakan</p>
+  <h2 class="subhead text-center">Daftar Total Pendapatan Kamar</h2>
+  <p class="text-center text-xs">Total pendapatan kamar dalam rentang tanggal</p>
   <table class="min-w-full text-gray-700 dark:text-white text-xs mt-5">
     <thead>
       <tr>
@@ -125,12 +125,13 @@
         <th class="py-2 px-4 border-b dark:border-gray-600">Check Out</th>
         <th class="py-2 px-4 border-b dark:border-gray-600">Harga Kamar</th>
         <th class="py-2 px-4 border-b dark:border-gray-600">Harga Ekstra</th>
+        <th class="py-2 px-4 border-b dark:border-gray-600">Checkout</th>
       </tr>
     </thead>
     <tbody>
       <% if (response.length) { %> <% response.forEach(res => { %>
       <tr>
-        <td class="py-2 px-4 border-b dark:border-gray-600 text-center"><%= res.name %></td>
+        <td class="py-2 px-4 border-b dark:border-gray-600"><%= res.name %></td>
         <td class="py-2 px-4 border-b dark:border-gray-600 text-center">Room # <%= res.roomNumber %></td>
         <td class="py-2 px-4 border-b dark:border-gray-600 text-center">
           <%= res.startDate.split('-').reverse().join('-') %>
@@ -140,6 +141,9 @@
         </td>
         <td class="py-2 px-4 border-b dark:border-gray-600 text-center"><%= addSeparator(res.totalRoom) %></td>
         <td class="py-2 px-4 border-b dark:border-gray-600 text-center"><%= addSeparator(res.totalExtra) %></td>
+        <td class="py-2 px-4 border-b dark:border-gray-600 text-center">
+          <%- res.checkout ? '<span class="text-red-600">Sudah</span>' : '<span>Belum</span>' %>
+        </td>
       </tr>
       <% }) %>
 
